--- a/templates/FrontOffice/Home/index.html.twig
+++ b/templates/FrontOffice/Home/index.html.twig
@@ -37,17 +37,17 @@
                     <div class="col-lg-3 col-sm-12 margin-top-30 margin-left-20 card-statistic-item">
                         <i class="fas fa-folder text-white"></i>
                         <span class="text-white mx-2">Courriers de départ</span>
-{#                        <span class="text-white">{{ types_dossiers }}</span>#}
+                        <span class="text-white">{{ count_courrier_depart }}</span>
                     </div>
                     <div class="col-lg-3 col-sm-12 margin-top-30 margin-left-20 card-statistic-item">
                         <i class="fas fa-folder text-white"></i>
                         <span class="text-white mx-2">Courriers d'arrivée</span>
-                        <span class="text-white">20</span>
+                        <span class="text-white">{{ count_courrier_arrive }}</span>
                     </div>
                     <div class="col-lg-3 col-sm-12 margin-top-30 margin-left-20 card-statistic-item">
                         <i class="fas fa-envelope text-white"></i>
                         <span class="text-white mx-2">Courriers archivés</span>
-                        <span class="text-white">35</span>
+                        <span class="text-white">{{ count_courrier_archive }}</span>
                     </div>
                 </div>
             </div>
