--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -8,7 +8,7 @@
                     <img src="{{ asset('assets/images/users/User-5.jpg') }}" alt="profile-user" class="rounded-circle thumb-xs" />
                 </a>
                 <div class="dropdown-menu dropdown-menu-right">
-                    <a class="dropdown-item" href=""><i data-feather="user" class="align-self-center icon-xs icon-dual mr-1"></i> Profile</a>
+                    <a class="dropdown-item" href="{{ url('profile') }}"><i data-feather="user" class="align-self-center icon-xs icon-dual mr-1"></i> Profile</a>
                     <div class="dropdown-divider mb-0"></div>
                     <a class="dropdown-item" href="{{ url('app_logout') }}"><i data-feather="power" class="align-self-center icon-xs icon-dual mr-1"></i>Déconnexion</a>
                 </div>
