--- a/templates/FrontOffice/Home/index.html.twig
+++ b/templates/FrontOffice/Home/index.html.twig
@@ -24,7 +24,10 @@
         <div class="banner d-flex justify-content-between align-items-start p-3">
             <div class="text-white">
                 <div>
-                    <h2 class="text-white">Bienvenue {{ app.user ? app.user.username : "" }}</h2>
+                    <h2 class="text-white">Bienvenue sur 
+                            <span class="text-success">MI</span>
+                            <span class="text-danger"> - FANDEFA</span>
+                        {{ app.user ? app.user.username : "" }}</h2>
                 </div>
             </div>
         </div>
