--- a/templates/partials/sidebar.html.twig
+++ b/templates/partials/sidebar.html.twig
@@ -10,7 +10,7 @@
         </a>
         <div class="ml-2">
             <span class="text-success">MI</span>
-            <span class="text-white"> - FANDEFA</span>
+            <span class="text-danger"> - FANDEFA</span>
         </div>
     </div>
     <!--end logo-->
