--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -28,10 +28,11 @@
                             <label for="ckb1">
                                 Souviens-toi de moi
                             </label>
+                            
                         </div>
                         <div>
-                            <a href="#" class="txt1">
-                                Mot de passe oublié?
+                          <a href="{{ url("app_register") }}" class="txt1">                               
+                                   <h4>créer un compte MI-FANDEFA</h4>                           
                             </a>
                         </div>
                     </div>
