--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -28,11 +28,10 @@
                             <label for="ckb1">
                                 Souviens-toi de moi
                             </label>
-                            
                         </div>
                         <div>
-                          <a href="{{ url("app_register") }}" class="txt1">                               
-                                   <h4>créer un compte MI-FANDEFA</h4>                           
+                            <a href="#" class="txt1">
+                                Mot de passe oublié?
                             </a>
                         </div>
                     </div>
@@ -45,7 +44,8 @@
 
                     <div class="text-center p-t-46 p-b-20">
                         <span class="txt2">
-                            <a href="">Créer un compte</a>
+                            <a href="{{ url("app_register") }}">
+                                <h3>Créer un compte</h3> </a>
                         </span>
                     </div>
                 </form>
