--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -26,6 +26,16 @@ thead{
     background: #0c213a;
 }
 
+.border-radius-50{
+    border-radius: 50% !important;
+    width: 30px !important;
+    height: 30px !important;
+    display: flex !important;
+    align-items: center !important;
+    justify-content: center !important;
+    font-size: 14px !important;
+}
+
 thead tr th{
     color: #fff !important;
 }
