--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -5,7 +5,12 @@
                 <a class="nav-link dropdown-toggle waves-effect waves-light nav-user" data-toggle="dropdown" href="#" role="button"
                    aria-haspopup="false" aria-expanded="false">
                     <span class="ml-1 nav-User-name hidden-sm">{{ app.user ? app.user.username|title : ""}} </span>
-                    <img src="{{ asset('assets/images/users/User-5.jpg') }}" alt="profile-user" class="rounded-circle thumb-xs" />
+                    {% if app.user.picture != NULL %}
+                        <img src="{{ asset( upload_images_users_directory ~ '/' ~ app.user.picture) }}"
+                             alt="picture teacher" class="rounded-circle thumb-xs">
+                    {% else %}
+                        <img src="{{ asset('img/no-image.png') }}" alt="No image" class="rounded-circle thumb-xs">
+                    {% endif %}
                 </a>
                 <div class="dropdown-menu dropdown-menu-right">
                     <a class="dropdown-item" href="{{ url('Profile') }}"><i data-feather="user" class="align-self-center icon-xs icon-dual mr-1"></i> Profile</a>
