--- a/templates/FrontOffice/Profile/index.html.twig
+++ b/templates/FrontOffice/Profile/index.html.twig
@@ -9,9 +9,15 @@
             <h4>Modification du profil</h4>
             {{ form_start(form) }}
             <div>
-                <img src="{{ asset('img/no-image.png') }}" class="avatar" alt="avatar">
-                <h6>Mettez un photo...</h6>
-                <input type="file" class="text-center center-block file-upload">
+{#                <img src="{{ asset('img/no-image.png') }}" class="avatar" alt="avatar">#}
+{#                <h6>Mettez un photo...</h6>#}
+{#                <input type="file" class="text-center center-block file-upload">#}
+                {% if app.user.picture != NULL %}
+                    <img src="{{ asset( upload_images_users_directory ~ '/' ~ app.user.picture) }}"
+                         alt="picture teacher" class="rounded-circle thumb-xs">
+                {% else %}
+                    <img src="{{ asset('img/no-image.png') }}" alt="No image" class="avatar">
+                {% endif %}
             </div></hr><br>
 
             <div class="row">
