--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -6,7 +6,7 @@
                    aria-haspopup="false" aria-expanded="false">
                     <span class="ml-1 nav-User-name hidden-sm">{{ app.user ? app.user.username|title : ""}} </span>
                     {% if app.user.picture != NULL %}
-                        <img src="{{ asset( upload_images_users_directory ~ '/' ~ app.user.picture) }}"
+                        <img src="{{ asset('uploads/images/users/' ~ app.user.picture) }}"
                              alt="picture teacher" class="rounded-circle thumb-xs">
                     {% else %}
                         <img src="{{ asset('img/no-image.png') }}" alt="No image" class="rounded-circle thumb-xs">
