--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -29,11 +29,11 @@
                                 Souviens-toi de moi
                             </label>
                         </div>
-                        <div>
+                        {# <div>
                             <a href="#" class="txt1">
                                 Mot de passe oublié?
                             </a>
-                        </div>
+                        </div> #}
                     </div>
 
                     <div class="container-login100-form-btn">
