--- a/templates/FrontOffice/Courrier/Corbeille/trash.html.twig
+++ b/templates/FrontOffice/Courrier/Corbeille/trash.html.twig
@@ -43,7 +43,7 @@
                                 <a href="{{ path('courrier_delete',{id:trashe.id})}}"
                                    onclick="return confirm('Est-ce que vous voulez supprimer definitivement ce courrier');"
                                 >
-                                    <i class="fas fa-trash"></i>
+                                    <i class="fas fa-trash text-danger"></i>
                                 </a>
                             </td>
                         </tr>
