--- a/templates/partials/sidebar.html.twig
+++ b/templates/partials/sidebar.html.twig
@@ -26,6 +26,12 @@
                     </a>
                 </li>
                 <li>
+                    <a href="{{ url("home") }}">
+                        <i class="fas fa-home text-white"></i>
+                        <span>Accueil</span>
+                    </a>
+                </li>
+                <li>
                     <a href="{{ url("courrier_received") }}">
                         <i class="fas fa-envelope text-white"></i>
                         <span>Boite de reception</span>
