--- a/templates/partials/sidebar.html.twig
+++ b/templates/partials/sidebar.html.twig
@@ -81,6 +81,9 @@
                     </a>
                 </li>
             {% if is_granted("ROLE_ADMIN") %}
+                <hr class="bg-secondary">
+            {% endif %}
+            {% if is_granted("ROLE_ADMIN") %}
                 <li>
                     <a href="{{ url('admin_dashboard') }}">
                         <i class="fas fa-chart-bar text-white"></i>
