--- a/templates/FrontOffice/Courrier/Archive/archived.html.twig
+++ b/templates/FrontOffice/Courrier/Archive/archived.html.twig
@@ -32,9 +32,9 @@
                     <tbody>
                     {% for archived_courrier in archived_courriers %}
                         <tr>
-                            <td>{{ archived_courrier.sender.email }}</td>
-                            <td class="{{ archived_courrier.isRead == 0 ? 'font-weight-bold' : '' }}">
-                                {{ archived_courrier.objetCourrier }}
+                            <td>{{ archived_courrier.user.email }}</td>
+                            <td class="{{ archived_courrier.courrier.isRead == 0 ? 'font-weight-bold' : '' }}">
+                                {{ archived_courrier.courrier.objetCourrier }}
                             </td>
                             <td>
                                 <a href="">
@@ -43,10 +43,10 @@
 {#                                <a href="{{ path('courrier_archived_show',{id:archived_courrier.id})}}">#}
 {#                                    <i class="fas fa-eye"></i>#}
 {#                                </a>#}
-                                <a href="{{ path('courrier_delete_trash',{id:archived_courrier.id})}}"
-                                   onclick="return confirm('Est-ce que vous voulez vraiment supprimer cet element');">
-                                    <i class="fas fa-trash text-danger"></i>
-                                </a>
+{#                                <a href="{{ path('courrier_delete_trash',{id:archived_courrier.id})}}"#}
+{#                                   onclick="return confirm('Est-ce que vous voulez vraiment supprimer cet element');">#}
+{#                                    <i class="fas fa-trash text-danger"></i>#}
+{#                                </a>#}
                             </td>
                         </tr>
                     {% else %}
