--- a/templates/FrontOffice/Profile/index.html.twig
+++ b/templates/FrontOffice/Profile/index.html.twig
@@ -36,7 +36,8 @@
             </div>
 
             <div class="row">
-                <div class="col-md-5">{{ form_row(form.fonction) }}</div>
+                <div class="col-md-3">{{ form_row(form.fonction) }}</div>
+                <div class="col-md-3">{{ form_row(form.departement) }}</div>
             </div>
             <button type="submit" class="btn btn-primary">Modifier</button>
             {{ form_end(form) }}
