--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -34,6 +34,7 @@
 
             <div class="row">
                 <div class="col-md-5">{{ form_row(form.fonction) }}</div>
+                <div class="col-md-3">{{ form_row(form.departement) }}</div>
             </div>
 
             <div class="row">
