--- a/templates/FrontOffice/Courrier/Corbeille/trash.html.twig
+++ b/templates/FrontOffice/Courrier/Corbeille/trash.html.twig
@@ -33,7 +33,7 @@
                     <tbody>
                     {% for trashe in trashes %}
                         <tr>
-                            <td>{{ trashe.sender.email }}</td>
+                            <td>{{ trashe.sender.username }}</td>
                             <td>
                                 {{ trashe.objetCourrier }}
                             </td>
