--- a/templates/FrontOffice/Courrier/Archive/archived.html.twig
+++ b/templates/FrontOffice/Courrier/Archive/archived.html.twig
@@ -37,16 +37,16 @@
                                 {{ archived_courrier.courrier.objetCourrier }}
                             </td>
                             <td>
-                                <a href="">
+                                <!-- <a href="">
                                     <i class="fas fa-share-alt text-info"></i>
-                                </a>
-{#                                <a href="{{ path('courrier_archived_show',{id:archived_courrier.id})}}">#}
-{#                                    <i class="fas fa-eye"></i>#}
-{#                                </a>#}
-{#                                <a href="{{ path('courrier_delete_trash',{id:archived_courrier.id})}}"#}
-{#                                   onclick="return confirm('Est-ce que vous voulez vraiment supprimer cet element');">#}
-{#                                    <i class="fas fa-trash text-danger"></i>#}
-{#                                </a>#}
+                                </a> -->
+{#<a href="{{ path('courrier_archived_show',{id:archived_courrier.id})}}">
+    <i class="fas fa-eye"></i>
+</a>#}
+<a href="{{ path('courrier_delete_trash',{id:archived_courrier.id})}}"
+   onclick="return confirm('Est-ce que vous voulez vraiment supprimer cet element');">
+    <i class="fas fa-trash text-danger"></i>
+</a>
                             </td>
                         </tr>
                     {% else %}
