--- a/templates/FrontOffice/Courrier/Recu/received.html.twig
+++ b/templates/FrontOffice/Courrier/Recu/received.html.twig
@@ -32,7 +32,7 @@
                     <tbody>
                     {% for received_courrier in received_courriers %}
                         <tr>
-                            <td>{{ received_courrier.sender.email }}</td>
+                            <td>{{ received_courrier.sender.username }}</td>
                             <td class="{{ received_courrier.isRead == 0 ? 'font-weight-bold' : '' }}">
                                 {{ received_courrier.objetCourrier }}
                             </td>
