priorité sur le courrier mais pas de vue

--- a/templates/BackOffice/Courrier/index.html.twig
+++ b/templates/BackOffice/Courrier/index.html.twig
@@ -28,6 +28,7 @@
                         <th>A</th>
                         <th>Sujet</th>
                         <th>Date</th>
+                        <th>Priorité </th>
                         <th>Actions</th>
                     </tr>
                     </thead>
