--- a/templates/partials/sidebar.html.twig
+++ b/templates/partials/sidebar.html.twig
@@ -39,7 +39,7 @@
                 </li>
                 <li>
                     <a href="{{ url('courrier_sent') }}">
-                        <i class="fas fa-envelope text-white"></i>
+                        <i class="fas fa-paper-plane text-white"></i>
                         <span>Courriers envoyé</span>
                     </a>
                 </li>
