--- a/templates/FrontOffice/Courrier/add.html.twig
+++ b/templates/FrontOffice/Courrier/add.html.twig
@@ -15,7 +15,7 @@
                                     <a href="javascript:void(0);">Gestion de Courrier</a>
                                 </li>
                                 <li class="breadcrumb-item">Courrier</li>
-                                <li class="breadcrumb-item active">Demande de validation</li>
+                                <li class="breadcrumb-item active">Nouveau courrier</li>
                             </ol>
                         </div><!--end col-->
                     </div><!--end row-->
