--- a/templates/FrontOffice/Courrier/Partage/partage.html.twig
+++ b/templates/FrontOffice/Courrier/Partage/partage.html.twig
@@ -37,9 +37,9 @@
                                       
                                 </td>
                                 <td>
-    {#                                <a href="{{ path('courrier_archived_show',{id:archived_courrier.id})}}">#}
-    {#                                    <i class="fas fa-eye"></i>#}
-    {#                                </a>#}
+<a href="#">
+    <i class="fas fa-eye"></i>
+</a>
                                     <a href="{{ path('courrier_delete_trash',{id:partage_courrier.id})}}"
                                        onclick="return confirm('Est-ce que vous voulez vraiment supprimer cet element');">
                                         <i class="fas fa-trash text-danger"></i>
