rectification redirection apres suppression dans boite de reception

--- a/templates/FrontOffice/Courrier/Recu/received.html.twig
+++ b/templates/FrontOffice/Courrier/Recu/received.html.twig
@@ -48,7 +48,7 @@
                                 <a href="{{ path('courrier_received_show',{id:received_courrier.id})}}" class="px-1">
                                     <i class="fas fa-eye"></i>
                                 </a>
-                                <a href="{{ path('courrier_delete_trash',{id:received_courrier.id})}}"
+                                <a href="{{ path('courrier_delete_trash_received',{id:received_courrier.id})}}"
                                    onclick="return confirm('Est-ce que vous voulez vraiment supprimer cet element');">
                                     <i class="fas fa-trash text-danger"></i>
                                 </a>
