--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -1,10 +1,12 @@
 <div class="topbar">
     <nav class="navbar-custom">
-        <ul class="list-unstyled topbar-nav float-right mb-0">
+        <ul class="list-unstyled topbar-nav float-right mb-0 order-5">
             <li class="dropdown">
                 <a class="nav-link dropdown-toggle waves-effect waves-light nav-user" data-toggle="dropdown" href="#" role="button"
                    aria-haspopup="false" aria-expanded="false">
-                    <span class="ml-1 nav-User-name hidden-sm">{{ app.user ? app.user.username|title : ""}} </span>
+                    <span class="ml-1 nav-User-name hidden-sm">
+                        {{ app.user ? app.user.username|title : ""}}
+                    </span>
                     {% if app.user.picture != NULL %}
                         <img src="{{ asset('uploads/images/users/' ~ app.user.picture) }}"
                              alt="picture teacher" class="rounded-circle thumb-xs">
