--- a/templates/FrontOffice/Courrier/Envoyé/sent.html.twig
+++ b/templates/FrontOffice/Courrier/Envoyé/sent.html.twig
@@ -26,16 +26,27 @@
                     <tr>
                         <th>Recepteur</th>
                         <th>Objet</th>
+                        <th>Priorité</th>
                         <th>Actions</th>
                     </tr>
                     </thead>
                     <tbody>
                     {% set route_name = app.request.attributes.get('_route') %}
                     {% for sent_courrier in sent_courriers %}
+                        {% set priorite = sent_courrier.priorite %}
                         <tr>
                             <td>{{ sent_courrier.recipient.username }}</td>
                             <td class="{{ sent_courrier.isRead == 0 ? 'font-weight-bold' : '' }}">
                                 {{ sent_courrier.objetCourrier }}
+                            </td>
+                            <td>
+                                {% if priorite == 1 %}
+                                    <span class="badge badge-success">Normale</span>
+                                {% elseif priorite == 2 %}
+                                    <span class="badge badge-warning">Urgent</span>
+                                {% elseif priorite == 3 %}
+                                    <span class="badge badge-danger">Très urgent</span>
+                                {% endif %}
                             </td>
                             <td>
                                 <a href="{{ url('courrier_share_user',{courrier_id:sent_courrier.id}) }}">
