--- a/templates/FrontOffice/Courrier/Recu/received.html.twig
+++ b/templates/FrontOffice/Courrier/Recu/received.html.twig
@@ -26,15 +26,26 @@
                     <tr>
                         <th>Emetteur</th>
                         <th>Objet</th>
+                        <th>Priorité</th>
                         <th>Actions</th>
                     </tr>
                     </thead>
                     <tbody>
                     {% for received_courrier in received_courriers %}
+                        {% set priorite = received_courrier.priorite %}
                         <tr>
                             <td>{{ received_courrier.sender.username }}</td>
                             <td class="{{ received_courrier.isRead == 0 ? 'font-weight-bold' : '' }}">
                                 {{ received_courrier.objetCourrier }}
+                            </td>
+                            <td>
+                                {% if priorite == 1 %}
+                                    <span class="badge badge-success">Normale</span>
+                                {% elseif priorite == 2 %}
+                                    <span class="badge badge-warning">Urgent</span>
+                                {% elseif priorite == 3 %}
+                                    <span class="badge badge-danger">Très urgent</span>
+                                {% endif %}
                             </td>
                             <td class="d-flex align-items-center">
                                 <a href="{{ url('valide_request',{id:received_courrier.id}) }}" class="px-1">
