--- a/templates/FrontOffice/Courrier/Envoyé/sent.html.twig
+++ b/templates/FrontOffice/Courrier/Envoyé/sent.html.twig
@@ -25,6 +25,7 @@
                     <thead>
                     <tr>
                         <th>Recepteur</th>
+                        <th>Reference</th>
                         <th>Objet</th>
                         <th>Priorité</th>
                         <th>Actions</th>
@@ -36,6 +37,7 @@
                         {% set priorite = sent_courrier.priorite %}
                         <tr>
                             <td>{{ sent_courrier.recipient.username }}</td>
+                            <td>{{ sent_courrier.reference }}</td>
                             <td class="{{ sent_courrier.isRead == 0 ? 'font-weight-bold' : '' }}">
                                 {{ sent_courrier.objetCourrier }}
                             </td>
