--- a/templates/FrontOffice/Courrier/Validation/show_request_validate.html.twig
+++ b/templates/FrontOffice/Courrier/Validation/show_request_validate.html.twig
@@ -26,30 +26,30 @@
             <div class="col-sm-4">
                 <div class="mb-2">
                     <span class="font-weight-bold">Recepteur :</span>
-                    <span>{{ requests_courrier is defined ? requests_courrier.recipient.email : "" }}</span>
+                    <span>{{ request_courrier is defined ? request_courrier.recipient.email : "" }}</span>
                 </div>
                 <div class="mb-2">
                     <span class="font-weight-bold">Emetteur :</span>
-                    <span>{{ requests_courrier is defined ? requests_courrier.sender.email : "" }}</span>
+                    <span>{{ request_courrier is defined ? request_courrier.sender.email : "" }}</span>
                 </div>
                 <div class="mb-2">
                     <span class="font-weight-bold">Objet :</span>
-                    <span>{{ requests_courrier is defined ? requests_courrier.objetCourrier : "" }}</span>
+                    <span>{{ request_courrier is defined ? request_courrier.objetCourrier : "" }}</span>
                 </div>
                 <div class="mb-2">
                     <span class="font-weight-bold">Date d'envoi :</span>
                     <span>
-                        {{ requests_courrier is defined ? requests_courrier.dateEnvoie|date('d/m/Y') : "" }} à
-                        {{ requests_courrier is defined ? requests_courrier.dateEnvoie|date('H:i') : "" }}
+                        {{ request_courrier is defined ? request_courrier.dateEnvoie|date('d/m/Y') : "" }} à
+                        {{ request_courrier is defined ? request_courrier.dateEnvoie|date('H:i') : "" }}
                     </span>
                 </div>
                 <div class="mb-2">
                     <span class="font-weight-bold">Type du courrier :</span>
-                    <span>{{ requests_courrier is defined ? requests_courrier.typeCourrier }}</span>
+                    <span>{{ request_courrier is defined ? request_courrier.typeCourrier }}</span>
                 </div>
                 <div class="mt-4">
                     <span class="font-weight-bold">Message :</span>
-                    <span>{{ requests_courrier is defined ? requests_courrier.message|raw }}</span>
+                    <span>{{ request_courrier is defined ? request_courrier.message|raw }}</span>
                 </div>
             </div>
         </div>
