--- a/templates/partials/sidebar.html.twig
+++ b/templates/partials/sidebar.html.twig
@@ -133,6 +133,12 @@
                     </a>
                 </li>
                 <li>
+                    <a href="{{ url('admin_type_courrier_index') }}">
+                        <i class="fas fa-envelope text-white"></i>
+                        <span>Types de courriers</span>
+                    </a>
+                </li>
+                <li>
                     <a href="{{ url('admin_courrier_index') }}">
                         <i class="fas fa-envelope text-white"></i>
                         <span>Courriers</span>
