--- a/templates/BackOffice/Dashboard/index.html.twig
+++ b/templates/BackOffice/Dashboard/index.html.twig
@@ -28,27 +28,6 @@
           <i class="fas fa-search text-white"></i>
           <input type="search" placeholder="Rechercher">
         </div>
-        {# <div>
-          <ul class="list-unstyled topbar-nav float-right mb-0">
-            <li class="dropdown">
-              <a class="nav-link dropdown-toggle waves-effect waves-light nav-user" data-toggle="dropdown" href="#" role="button"
-                 aria-haspopup="false" aria-expanded="false">
-                <img src="{{ asset('assets/images/users/User-5.jpg') }}" alt="profile-user" class="rounded-circle thumb-xs" />
-              </a>
-              <div class="dropdown-menu dropdown-menu-right">
-                <a class="dropdown-item" href="">
-                  <i data-feather="user" class="align-self-center icon-xs icon-dual mr-1"></i>
-                  Profile
-                </a>
-                <div class="dropdown-divider mb-0"></div>
-                <a class="dropdown-item" href="">
-                  <i data-feather="power" class="align-self-center icon-xs icon-dual mr-1"></i>
-                  Déconnexion
-                </a>
-              </div>
-            </li>
-          </ul>
-        </div> #}
       </div>
     </div>
     {#  End banner  #}
@@ -91,6 +70,11 @@
               <i class="fas fa-folder text-white"></i>
               <span class="text-white mx-2">Dossiers</span>
               <span class="text-white">{{ dossiers }}</span>
+            </div>
+            <div class="col-lg-3 col-sm-12 margin-top-30 margin-left-20 card-statistic-item">
+              <i class="fas fa-envelope text-white"></i>
+              <span class="text-white mx-2">Types de courriers</span>
+              <span class="text-white">{{ types_courriers }}</span>
             </div>
             <div class="col-lg-3 col-sm-12 margin-top-30 margin-left-20 card-statistic-item">
               <i class="fas fa-envelope text-white"></i>
