--- a/templates/BackOffice/TypeCourrier/add.html.twig
+++ b/templates/BackOffice/TypeCourrier/add.html.twig
@@ -1,5 +1,5 @@
 {% extends "base_admin.html.twig" %}
-{% block title %}{{ parent() }} Modification du type de courrier {% endblock %}
+{% block title %}{{ parent() }} Ajout de type de courrier {% endblock %}
 
 {% block body %}
     {% include 'partials/header.html.twig' %}
@@ -15,7 +15,7 @@
                                     <a href="javascript:void(0);">Gestion de Courrier</a>
                                 </li>
                                 <li class="breadcrumb-item">Type de courrier</li>
-                                <li class="breadcrumb-item active">Modification</li>
+                                <li class="breadcrumb-item active">Ajout</li>
                             </ol>
                         </div><!--end col-->
                     </div><!--end row-->
@@ -26,13 +26,13 @@
             <div class="col-sm-12">
                 {{ form_start(form,{'attr':{'novalidate':'novalidate'}}) }}
                 {{ form_widget(form) }}
-                <div class="d-flex">
-                    <button class="btn btn-success mx-2 rounded-0">Modifier</button>
-                    <a href="{{ path('admin_type_courrier_index') }}"
-                       class="btn btn-warning rounded-0">
-                        Retourner
-                    </a>
-                </div>
+                    <div class="d-flex">
+                        <button class="btn btn-primary mx-2 rounded-0">Enregistrer</button>
+                        <a href="{{ path('admin_type_courrier_index') }}"
+                           class="btn btn-warning rounded-0">
+                            Retourner
+                        </a>
+                    </div>
                 {{ form_end(form) }}
             </div>
         </div>
