--- a/templates/BackOffice/User/edit.html.twig
+++ b/templates/BackOffice/User/edit.html.twig
@@ -25,8 +25,7 @@
         <div class="row">
             <div class="col-sm-4">
                 {{ form_start(form,{'attr':{'novalidate':'novalidate'}}) }}
-                    {{ form_label(form.roles) }}
-                    {{ form_widget(form.roles) }}
+                    {{ form_widget(form) }}
                     <div class="d-flex">
                         <button class="btn btn-success mx-2 rounded-0">Modifier</button>
                         <a href="{{ path('admin_user_index') }}"
