--- a/templates/FrontOffice/Courrier/Archive/archived.html.twig
+++ b/templates/FrontOffice/Courrier/Archive/archived.html.twig
@@ -26,6 +26,7 @@
                     <tr>
                         <th>Emetteur</th>
                         <th>Objet</th>
+                        <!-- <th>Priorité</th> -->
                         <th>Actions</th>
                     </tr>
                     </thead>
