--- a/templates/FrontOffice/Home/index.html.twig
+++ b/templates/FrontOffice/Home/index.html.twig
@@ -30,6 +30,10 @@
                         {{ app.user ? app.user.username : "" }}</h2>
                 </div>
             </div>
+            <div class="input-rounded">
+                    <i class="fas fa-search text-white"></i>
+                    <input type="search" placeholder="Rechercher">
+                  </div>
         </div>
         {#  End banner  #}
 
