--- a/templates/FrontOffice/Courrier/Archive/archived.html.twig
+++ b/templates/FrontOffice/Courrier/Archive/archived.html.twig
@@ -25,19 +25,34 @@
                     <thead>
                     <tr>
                         <th>Emetteur</th>
+                        <th>Réference</th>
                         <th>Objet</th>
-                        <!-- <th>Priorité</th> -->
+                        <th>Priorité</th>
                         <th>Actions</th>
                     </tr>
                     </thead>
                     <tbody>
                         {% for archived_courrier in archived_courriers %}
+                        {% set priorite = archived_courrier.courrier.priorite %}
                             <tr>
                                 <td>{{ archived_courrier.user.username }}</td>
+                                <td>{{ archived_courrier.courrier.reference }}</td>
                                 <td class="{{ archived_courrier.courrier.isRead == 0 ? 'font-weight-bold' : '' }}">
                                     {{ archived_courrier.courrier.objetCourrier }}
                                 </td>
                                 <td>
+                                    {% if priorite == 1 %}
+                                        <span class="badge badge-success">Normale</span>
+                                    {% elseif priorite == 2 %}
+                                        <span class="badge badge-warning">Urgent</span>
+                                    {% elseif priorite == 3 %}
+                                        <span class="badge badge-danger">Très urgent</span>
+                                    {% endif %}
+                                </td>
+                                <td>
+                                        <a href="{{ path('show_courrier_archived',{id:archived_courrier.id})}}" class="px-1">
+                                                <i class="fas fa-eye"></i>
+                                        </a>
                                     <a href="{{ path('courrier_delete_trash_archived',{id:archived_courrier.id})}}"
                                        onclick="return confirm('Est-ce que vous voulez vraiment supprimer cet element');">
                                         <i class="fas fa-trash text-danger"></i>
