--- a/templates/FrontOffice/courrier_classer/index.html.twig
+++ b/templates/FrontOffice/courrier_classer/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base_admin.html.twig' %}
 
-{% block title %}{{ parent() }} Courrier {% endblock %}
+{% block title %}{{ parent() }} Classement {% endblock %}
 
 {% block body %}
     {% include 'partials/header.html.twig' %}
@@ -10,37 +10,38 @@
                 <div class="page-title-box">
                     <div class="row">
                         <div class="col">
-                            <h4 class="page-title">Courriers</h4>
+                            <h4 class="page-title">Classement</h4>
                             <ol class="breadcrumb pt-3 d-flex align-items-center">
                                 <li class="breadcrumb-item">
                                     <a href="javascript:void(0);">Gestion de Courrier</a>
                                 </li>
-                                <li class="breadcrumb-item active">Courrier</li>
+                                <li class="breadcrumb-item active">Classement</li>
                             </ol>
                         </div><!--end col-->
+                        <div class="col-auto align-self-center">
+                                <a href="{{ path('courrier_classer_new') }}" class="btn btn-primary float-right mb-3">
+                                    <i class="fa fa-plus"></i>
+                                    Classer un courrier
+                                </a>
+                            </div>
                     </div><!--end row-->
                 </div>
 
                 <table class="table table-striped">
                     <thead>
                     <tr>
-                        <th>De</th>
-                        <th>A</th>
-                        <th>Sujet</th>
-                        <th>Date</th>
-                        <th>Priorité </th>
+                        <th>Courrier</th>
+                        <th>Type de dossier</th>
                         <th>Actions</th>
                     </tr>
                     </thead>
-                    <tbody>    
-                       {% for courrier in courriers %}
-                        <tr>
-                            <td>{{ courrier.sender.username }}</td>
-                            <td>{{ courrier.recipient.username }}</td>
-                            <td>{{ courrier.objetCourrier }}</td>
-                            <td>{{ courrier.dateEnvoie|date('d-m-Y') }}</td>
-                        </tr>
-                       {% endfor %}
+                    <tbody>
+                        {% for courrier_classer in courrier_classers %}
+                            <tr>
+                                <td>{{ courrier_classer.courrier.reference }}</td>
+                                <td>{{ courrier_classer.typDos.libelleTypeDossier }}</td>
+                            </tr>
+                        {% endfor %}
                     </tbody>
                 </table>
             </div>
