--- a/templates/partials/sidebar.html.twig
+++ b/templates/partials/sidebar.html.twig
@@ -75,6 +75,13 @@
                     </a>
                 </li>
                 <li>
+                    <a href="{{ url('courrier_classer') }}">
+                        <i class="fas fa-file-download text-white"></i>
+{#                        <span>Demander une validation</span>#}
+                        <span>Courrier classé</span>
+                    </a>
+                </li>
+                <li>
                     <a href="{{ url('courrier_trash') }}">
                         <i class="fas fa-trash text-white"></i>
                         <span>Corbeille</span>
