--- a/templates/FrontOffice/Courrier/Envoyé/show_sent.html.twig
+++ b/templates/FrontOffice/Courrier/Envoyé/show_sent.html.twig
@@ -45,7 +45,7 @@
                 </div>
                 <div class="mb-2">
                     <span class="font-weight-bold">Type du courrier :</span>
-                    <span>{{ sent_courrier is defined ? sent_courrier.typeCourrier }}</span>
+                    <span>{{ sent_courrier.typeCourrier is defined ? sent_courrier.typeCourrier.libelleTypeCourrier }}</span>
                 </div>
                 {% if sent_courrier.fichier is defined %}
                     <div class="mb-2 {{ sent_courrier.fichier is null ? 'd-none' : '' }}">
